[package]
name = "ambiq-hal-sys"
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
version = "0.1.0"
edition = "2021"
description = "Bindings to the Ambiq SDK"
license-file = "AM-BSD-EULA.txt"
repository = "https://github.com/gauteh/ambiq-rs"
exclude = [
  "ambiq-sparkfun-sdk/boards",
  "ambiq-sparkfun-sdk/pack",
  "ambiq-sparkfun-sdk/docs",
  "ambiq-sparkfun-sdk/boards_sfe/common/tools_sfe",
  "**/*.axf",
  "**/*.out",
  "**/*.log",
  "**/*.txt",
  "**/*.lib",
  "**/*.a",
  "**/bin/*",
]

[dependencies]

[build-dependencies]
bindgen = "0.59"
cc = "1"
glob = "0.3"
fs_extra = "1"

[features]
utils = []
sparkfun-redboard = []
sparkfun-redboard-nano = []
default = [ "sparkfun-redboard" ]
