[package]
name = "ambiq-hal"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gauteh/ambiq-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.6", features = [ "unproven" ] }
cortex-m = "0.7.3"
# panic-halt = { version = "*", optional = true }
# cortex-m-rt = { version = "*", optional = true }
typenum = "1.14.0"
paste = "1.0.5"
nb = "1.0.0"
ufmt = "0.1.0"
defmt = "0.2.3"
embedded-time = "0.12.1"
chrono = { version = "0.4.19", default-features = false }

[dependencies.ambiq-hal-sys]
path = "../ambiq-hal-sys"
optional = true
version = "0.1"

[dependencies.ambiq-apollo3-pac]
path = "../pac/apollo3"
version = "0.1.0"

[features]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

ambiq-sdk = [ "ambiq-hal-sys" ]
sparkfun-redboard = [ "ambiq-hal-sys?/sparkfun-redboard" ]
sparkfun-redboard-nano = [ "ambiq-hal-sys?/sparkfun-redboard-nano" ]
# examples = ["panic-halt", "cortex-m-rt"]
default = [ "defmt-default" ]
rt = [ "ambiq-apollo3-pac/rt" ]
