[package]
name = "ambiq-hal"
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gauteh/ambiq-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.6", features = [ "unproven" ] }
cortex-m = "0.7.3"
cortex-m-rt = { version = "*", optional = true }
paste = "1.0.5"
nb = "1.0.0"
ufmt = "0.1.0"
defmt = "0.3"
embedded-time = "0.12.1"
chrono = { version = "0.4.19", default-features = false }

[dependencies.ambiq-hal-sys]
path = "../ambiq-hal-sys"
optional = true
version = "0.1"

[dependencies.ambiq-apollo3-pac2]
path = "../pac/apollo3"
version = "0.2.0"

[features]
ambiq-sdk = [ "ambiq-hal-sys" ]
sparkfun-redboard = [ "ambiq-hal-sys?/sparkfun-redboard" ]
sparkfun-redboard-nano = [ "ambiq-hal-sys?/sparkfun-redboard-nano" ]
# examples = ["panic-halt", "cortex-m-rt"]
default = [ ]
rt = [ "cortex-m-rt", "ambiq-apollo3-pac2/rt" ]
