[package]
name = "ambiq-hal"
description = "HAL for the Ambiq Apollo MCU and boards"
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
version = "0.3.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/gauteh/ambiq-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "1" }
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", optional = true }
paste = "1"
nb = "1"
ufmt = "0.2"
defmt = "0.3"
embedded-time = "0.12"
chrono = { version = "0.4", default-features = false }
rtcc = "0.3"

[dependencies.ambiq-hal-sys]
path = "../ambiq-hal-sys"
optional = true
version = "0.1"

[dependencies.ambiq-apollo3-pac2]
path = "../pac/apollo3"
version = "0.2.0"

[features]
ambiq-sdk = [ "ambiq-hal-sys" ]
sparkfun-redboard = [ "ambiq-hal-sys/sparkfun-redboard" ]
sparkfun-redboard-nano = [ "ambiq-hal-sys/sparkfun-redboard-nano" ]
# examples = ["panic-halt", "cortex-m-rt"]
default = [ ]
rt = [ "cortex-m-rt", "ambiq-apollo3-pac2/rt" ]
