[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2021"
default-run = "{{ project-name }}"
authors = [ "{{ authors }}" ]

[dependencies]
panic-halt = "0.2.0"
cortex-m-rt = { version = "0.7.0"}
ufmt = "0.1"
rtt-target = { version = "*", features = [ "cortex-m" ] }

[dependencies.ambiq-hal]
version = "*"
features = [ "ambiq-sdk", "sparkfun-redboard-nano", "rt"]

[patch.crates-io]
ambiq-hal = { path = "../ambiq-hal" }
