[package]
name = "sparkfun-redboard-artemis-halc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"

[dependencies.ambiq-hal-sys]
path = "../../ambiq-hal-sys"
features = ["sparkfun-redboard"]
