[package]
name = "redboard-artemis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
cortex-m-rt = "0.7.0"
cortex-m = "0.7.3"

[dependencies.ambiq-hal]
path = "../../ambiq-hal"
features = [ "rt"]

[dev-dependencies]
rtt-target = { version = "*", features = [ "cortex-m" ] }
panic-rtt-target = { version = "*", features = [ "cortex-m" ] }
panic-semihosting = "*"
panic-itm = "*"
cortex-m-semihosting = { version = "*", features = [ "jlink-quirks" ] }
