[package]
name = "redboard-artemis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.0"
cortex-m = "0.7.3"

[dependencies.ambiq-hal]
path = "../../ambiq-hal"
features = [ "rt", "ambiq-sdk", "sparkfun-redboard" ]

[dev-dependencies]
rtt-target = { version = "*", features = [ "cortex-m" ] }
panic-rtt-target = { version = "*", features = [ "cortex-m" ] }
embedded-sdmmc = { version = "0.3" }
embedded-hal = "0.2"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[patch.crates-io]
embedded-sdmmc = { path = "../../../embedded/embedded-sdmmc-rs" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-
