[package]
name = "ambiq-apollo3-pac2"
version = "0.1.0"
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
description = "Peripheral access API for APOLLO3 microcontrollers"
repository = "https://github.com/gauteh/ambiq-rs"
license = "MIT/Apache-2.0"
keywords = ["ambiq", "apollo3", "svd2rust", "embedded", "no_std"]
categories = ["embedded", "no-std"]
edition = "2021"

[dependencies]
bare-metal = "0.2.4"
cortex-m = "0.7"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.7"

[features]
rt = ["cortex-m-rt/device"]
