[package]
name = "probe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
env_logger = "0.9.0"
log = "0.4.14"
probe-rs = "0.11.0"

[patch.crates-io]
probe-rs = { path = "../../../embedded/probe-rs/probe-rs" }
